Fix short promobox on mobiles

--- a/themes/happyteam/scss/main.scss
+++ b/themes/happyteam/scss/main.scss
@@ -249,6 +249,9 @@ a {
     &.short {
       height: 150px;
       overflow: hidden;
+      @include media('<tablet') {
+        height: auto;
+      }
     }
     >img{
       display: block;
